### refactor(tests): Refactored and optimized code for tests (HEAD)
>Thu, 11 Apr 2024 14:20:59 +0200

>Author: Emile-Muller (emile.muller.contact@gmail.com)

>Commiter: Emile-Muller (emile.muller.contact@gmail.com)




### fix(*): Correcting typos
>Thu, 11 Apr 2024 14:17:42 +0200

>Author: Emile-Muller (emile.muller.contact@gmail.com)

>Commiter: Emile-Muller (emile.muller.contact@gmail.com)




### fix(config): Added IntelliJ and ApacheSIS files to .gitignore. Updated pre-commit-config and requirements.
>Thu, 11 Apr 2024 14:11:08 +0200

>Author: Emile-Muller (emile.muller.contact@gmail.com)

>Commiter: Emile-Muller (emile.muller.contact@gmail.com)




### Update README.rst (origin/main, origin/HEAD, main)
>Wed, 20 Sep 2023 14:32:56 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: GitHub (noreply@github.com)




### Fix command
>Mon, 22 May 2023 17:07:05 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Add a script to monitor performances Update dockerfile
>Mon, 22 May 2023 16:43:10 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Fix methods due to the new version of fastapi Closes #5 - use httpx instead of http3
>Mon, 22 May 2023 15:09:11 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Fix url in precommit
>Mon, 22 May 2023 15:04:24 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Fix problem with Ctrl+c Improve quality code Add tests
>Sun, 16 Oct 2022 23:32:58 +0200

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
